<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="123.00" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/amountInput" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/withdrawButton"
        app:layout_constraintTop_toBottomOf="@id/balance">

        <TextView
            android:id="@+id/pastTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="16dp"
            android:textSize="24sp" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Withdraw"
        app:layout_constraintBottom_toTopOf="@+id/pastTransactionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/depositButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Deposit"
        app:layout_constraintBottom_toTopOf="@id/withdrawButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pastTransactionsButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Show Past Transactions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>